--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "static_site_bootstrap",
+  "name": "middleman-webpack-sample",
   "version": "1.0.0",
-  "description": "",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "main": "index.js",
+  "repository": "ssh://git@github.com/t4traw/middleman-webpack-sample.git",
+  "author": "Tatsuro Moriyama <t4traw@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3",
-    "run-sequence": "^1.1.5"
+    "autoprefixer": "^7.2.5",
+    "css-loader": "^0.28.9",
+    "csswring": "^6.0.2",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.1",
+    "webpack": "^3.10.0"
+  },
+  "scripts": {
+    "develop": "webpack --config ./webpack.config.js --watch -d --progress --colors",
+    "build": "webpack --config ./webpack.config.js --bail -p"
   }
 }
