--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "middleman-webpack-sample",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
-  "repository": "ssh://git@github.com/t4traw/middleman-webpack-sample.git",
+  "repository": "https://github.com/t4traw/static_site_bootstrap",
   "author": "Tatsuro Moriyama <t4traw@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^7.2.5",
-    "css-loader": "^0.28.9",
-    "csswring": "^6.0.2",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "webpack": "^3.10.0"
+    "autoprefixer": "^9.1.3",
+    "css-loader": "^1.0.0",
+    "csswring": "^7.0.0",
+    "node-sass": "^4.9.3",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "develop": "webpack --config ./webpack.config.js --watch -d --progress --colors",
