--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "import-glob-loader": "^1.1.0"
   },
   "scripts": {
     "develop": "webpack --config ./webpack.config.js --watch -d --progress --colors",
