--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^9.1.3",
-    "css-loader": "^1.0.0",
+    "css-loader": "^2.1.1",
     "csswring": "^7.0.0",
+    "import-glob-loader": "^1.1.0",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "import-glob-loader": "^1.1.0"
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "develop": "webpack --config ./webpack.config.js --watch -d --progress --colors",
