--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "author": "Tatsuro Moriyama <t4traw@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.1.3",
+    "autoprefixer": "^9.6.0",
     "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
     "csswring": "^7.0.0",
     "import-glob-loader": "^1.1.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
+    "purgecss-webpack-plugin": "^1.5.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.17.1",
